# Alpha

./: .gitignore  CMakeLists.txt  messages.txt
cmake/: Common.cmake
include/: Common.hpp  Constants.hpp  DnsQuery.hpp  Networking.hpp  Paxos.hpp  Testing.hpp
include/Common/: ByteHelper.hpp  ListUtils.hpp  Types.hpp
include/Message/: PutMessageRequest.hpp
include/Networking/: IPv4Address.hpp  InMemoryNetwork.hpp  Sockets.hpp
src/: Client  Client.cpp  Common.cpp  DnsQuery.cpp  Networking.cpp  Paxos.cpp  ScratchSpace.cpp  Server  Server.cpp
src/Common/: ByteHelper.cpp
src/Message/: PutMessageRequest.cpp
src/Networking/: IPv4Address.cpp  InMemoryNetwork.cpp  Sockets.cpp
test/: DnsQueryTest.cpp  NetworkingTest.cpp
test/Common/: ListUtilsTest.cpp
test/Message/: PutMessageRequestTest.cpp
test/Networking/: InMemoryNetworkTest.cpp
